--- a/Assignment1.tex
+++ b/Assignment1.tex
@@ -1,18 +1,16 @@
-\documentclass{article}
+\documentclass[journal,12pt,twocolumn]{IEEEtran}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
 
-\title{\textbf{PROBABILITY AND RANDOM VARIABLES (AI1103)}}
+\title{\textbf{PROBABILITY AND RANDOM VARIABLES (AI1103)}\\ Assignment 1}
 \author{GANJI VARSHITHA-AI20BTECH11009}
 
 
 \begin{document}
 
 \maketitle
-\begin{center}
-\section*{Assignment 1}
-\end{center}
+
 \section*{Question}
 \textbf{Assigned Problem 6.9}
 \\
@@ -33,17 +31,18 @@ $\Rightarrow$ Every element of A is an element of B.\\
 We know that 
 \begin{equation}
  \begin{split}
- P(\frac{A}{B})&= \frac{P(A\cap B)}{P(B)}  \\ 
+ P\Big(\frac{A}{B}\Big)&= \frac{P(A\cap B)}{P(B)}  \\ 
  &=\frac{P(A)}{P(B)}
  \label{eq2}
 \end{split}
 \end{equation}
 Given $0<P(B)\leq1$
-\\ \Large{$\Rightarrow \frac{1}{P(B)} \geq 1$}\\ 
+\\ $\Rightarrow \frac{1}{P(B)} \geq 1$\\
+
 \textnormal{By multiplying with P(A) on both sides of the inequality, we get\\
 \\
 $\frac{P(A)}{P(B)}\geq$ }{\normalsize{P(A)}}\\
-\\
+
 Using \ref{eq2}, we have 
 $$P \Big (\frac{A}{B} \Big) \geq P(A)$$
 Therefore, option 3 is correct.
