--- a/Assignment1.tex
+++ b/Assignment1.tex
@@ -121,8 +121,8 @@ columns=fullflexible
      \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
      \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
 \vspace{3cm}
-\title{Assignment 7}
-\author{Sachinkumar Dubey - EE20MTECH11009}
+\title{\textbf{PROBABILITY AND RANDOM VARIABLES \\ Assignment 1}
+\author{GANJI VARSHITHA - AI20BTECH11009}
 \maketitle
 \newpage
 \bigskip
