--- a/Assignment1.tex
+++ b/Assignment1.tex
@@ -121,7 +121,7 @@ columns=fullflexible
      \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
      \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
 \vspace{3cm}
-\title{\textbf{PROBABILITY AND RANDOM VARIABLES \\ Assignment 1}
+\title{\textbf{PROBABILITY AND RANDOM VARIABLES \\ Assignment 1}}
 \author{GANJI VARSHITHA - AI20BTECH11009}
 \maketitle
 \newpage
@@ -162,19 +162,12 @@ Given $0<P\brak{B}\leq1$
 \begin{align}
   \Rightarrow \frac{1}{P\brak{B}} \geq 1 
 \end{align}  
+\textnormal{By multiplying with P$\brak{A}$ on both sides of the inequality, we get}
 
-\textnormal{By multiplying with P$\brak{A}$ on both sides of the inequality, we get}\\
-\\
 \begin{align}
  \frac{P\brak{A}}{P\brak{B}}\geq {\normalsize{P\brak{A}}}
 \end{align}
 Using \ref{eq2}, we have 
 $$P \brak {\frac{A}{B}} \geq P\brak{A}$$
 Therefore, option 3 is correct.
-
-
-
-
-
 \end{document}
-
