--- a/Assignment1.tex
+++ b/Assignment1.tex
@@ -138,9 +138,9 @@ https://github.com/VARSHITHAGANJI/AI1103_PROBABILTY-AND-RANDOM-VARIABLES/blob/ma
 \\
 If A and B are two events such that $A\subset B$ and $P(B)\neq 0$, then which of the following is correct?
 \begin{enumerate}
-   \item \pr{A|B} = $\frac{P\brak{B}}{P\brak{A}}$
-   \item  \pr{A|B} $< P\brak{A}$ 
-   \item \pr{A|B} $\geq P\brak{A}$ 
+   \item \pr{A|B} = \frac{\pr{B}}{\pr{A}}
+   \item  \pr{A|B} $<$ \pr{A} 
+   \item \pr{A|B} $\geq$ \pr{A} 
    \item None of these
 \end{enumerate}
 \section*{Solution}
